--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 	</head>
 	<body>
 		Hello! It is really work)
-		<a href="https://api.vk.com/method/messages.send?domain=artem_trygub&message=test&v=5.34&access_token=p1qcONG4pGzd9WokAdlC">test</a>
+		<a href="https://api.vk.com/method/messages.send?domain=artem_trygub&message=test&v=5.34&access_token=p1qcONG4pGzd9WokAdlC" method="POST">test</a>
 	</body>
 </html>
