modified:   index.html

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 	</head>
 	<body>
 		<?
-			$wall = file_get_contents("https://api.vk.com/method/wall.get?v=5.34&filter=others&domain=myrusakov&count=5");
-			print_r($wall);
+			wall = file_get_contents("https://api.vk.com/method/wall.get?v=5.34&filter=others&domain=myrusakov&count=5");
+			print(wall);
 		?>
 	</body>
 </html>
