modified:   index.html

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<title>Фото обмен</title>
 	</head>
 	<body>
-		<?
+		<?php
 			wall = file_get_contents("https://api.vk.com/method/wall.get?v=5.34&filter=others&domain=myrusakov&count=5");
 			print(wall);
 		?>
