--- a/index.html
+++ b/index.html
@@ -1,12 +1,8 @@
-<html>
-	<head>
-		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-		<title>Фото обмен</title>
-	</head>
-	<body>
-		<?php
-			wall = file_get_contents("https://api.vk.com/method/wall.get?v=5.34&filter=others&domain=myrusakov&count=5");
-			print(wall);
-		?>
-	</body>
-</html>
+<?php
+  $wall = file_get_contents("http://api.vk.com/method/wall.get?v=5.3&filter=others&domain=myrusakov&count=5"); // Отправляем запрос
+  $wall = json_decode($wall); // Преобразуем JSON-строку в массив
+  $wall = $wall->response->items; // Получаем массив комментариев
+  for ($i = 0; $i < count($wall); $i++) {
+    echo "<p><b>".($i + 1)."</b>. <i>".$wall[$i]->text."</i><br /><span>".date("Y-m-d H:i:s", $wall[$i]->date)."</span></p>"; // Выводим записи
+  }
+?>
