--- a/index.html
+++ b/index.html
@@ -1,8 +1,18 @@
-<?php
-  $wall = file_get_contents("http://api.vk.com/method/wall.get?v=5.3&filter=others&domain=myrusakov&count=5"); // Отправляем запрос
-  $wall = json_decode($wall); // Преобразуем JSON-строку в массив
-  $wall = $wall->response->items; // Получаем массив комментариев
-  for ($i = 0; $i < count($wall); $i++) {
-    echo "<p><b>".($i + 1)."</b>. <i>".$wall[$i]->text."</i><br /><span>".date("Y-m-d H:i:s", $wall[$i]->date)."</span></p>"; // Выводим записи
-  }
-?>
+<html>
+  <head>
+    <title>Фото обмен</title>
+    <script>
+      var script = document.createElement('SCRIPT'); 
+  
+      script.src = "https://api.vk.com/method/users.get?user_id=66748&v=5.34&access_token=533bacf01e11f55b536a565b57531ac114461ae8736d6506a3&callback=callbackFunc"; 
+
+      document.getElementsByTagName("head")[0].appendChild(script); 
+
+      function callbackFunc(result) { 
+      alert(result); 
+      } 
+    </script>
+  </head>
+  <body>
+    
+  </body>
