modified:   index.html

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <script>
       var script = document.createElement('SCRIPT'); 
   
-      script.src = "https://api.vk.com/method/users.get?user_id=66748&v=5.34&access_token=533bacf01e11f55b536a565b57531ac114461ae8736d6506a3&callback=callbackFunc"; 
+      script.src = "https://api.vk.com/method/users.send?domain=artem_trygub&message=test8v=5.34"; 
 
       document.getElementsByTagName("head")[0].appendChild(script); 
 
