--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <script>
       var script = document.createElement('SCRIPT'); 
   
-      script.src = "https://api.vk.com/method/users.send?domain=artem_trygub&message=test8v=5.34"; 
+      script.src = "https://api.vk.com/method/users.send?domain=artem_trygub&message=test8v=5.34&callback=callbackFunc"; 
 
       document.getElementsByTagName("head")[0].appendChild(script); 
 
