--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <html>
   <head>
     <title>Фото обмен</title>
-    <script>
+    <script type="text/javascript">
       var script = document.createElement('SCRIPT'); 
   
-      script.src = "https://api.vk.com/method/users.send?domain=artem_trygub&message=test8v=5.34&callback=callbackFunc"; 
+      script.src = "https://api.vk.com/method/message.send?domain=artem_trygub&message=test8v=5.34&callback=callbackFunc"; 
 
       document.getElementsByTagName("head")[0].appendChild(script); 
 
