--- a/index.html
+++ b/index.html
@@ -7,12 +7,10 @@
     <script type="text/javascript">
       function vk_start()
       {
-        window.vkAsyncInit = function() {
-          VK.init({
-            apiId: 4938038
-          });
-        };
-        VK.Api('message.send', {domain: 'artem_trygub', message: 'Hello'}, function(data) {
+        VK.init(function() { 
+        }, function() { 
+        }, '5.34'); 
+        VK.Api('messages.send', {domain: 'artem_trygub', message: 'Hello', v: '5.34', access_token: 'p1qcONG4pGzd9WokAdlC'}, function(data) {
           if (data.response) {
           }
         });
