--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         VK.init(function() { 
         }, function() { 
         }, '5.34'); 
-        VK.Api('messages.send', {domain: 'artem_trygub', message: 'Hello', v: '5.34', access_token: 'p1qcONG4pGzd9WokAdlC'}, function(data) {
+        VK.api('messages.send', {domain: 'artem_trygub', message: 'Hello', v: '5.34', access_token: 'p1qcONG4pGzd9WokAdlC'}, function(data) {
           if (data.response) {
           }
         });
