--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <script type="text/javascript">
       function vk_start()
       {
-        VK.init(function() { 
+        VK.init(function() {
+          print("ess");
         }, function() { 
         }, '5.34'); 
         VK.api('messages.send', {domain: 'artem_trygub', message: 'Hello', v: '5.34', access_token: 'p1qcONG4pGzd9WokAdlC'}, function(data) {
