--- a/index.html
+++ b/index.html
@@ -8,16 +8,19 @@
       function vk_start()
       {
         VK.init(function() {
-          VK.api('messages.send', {domain: 'artem_trygub', message: 'Hello', v: '5.34', access_token: 'p1qcONG4pGzd9WokAdlC'}, function(data) {
+          VK.api('messages.send', {domain: 'artem_trygub', message: 'Hello', v: '5.34', access_token: ''}, function(data) {
           if (data.response) {
           }
           });
         }, function() { 
-        }, '5.34'); 
+        }, '5.34');
       }
+              function invite() {
+	VK.callMethod('showInviteBox');
+}
     </script>
   </head>
   <body>
-    <input type="button" onclick="vk_start()" value="Test">
+    <input type="button" onclick="invite()" value="Test">
   </body>
 </html>
