modified:   index.html

--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
     </script>
   </head>
   <body>
-    <input type="button" onclick="get_friends_app()" value="Test">
+    <input type="button" onclick="message()" value="Test">
   </body>
 </html>
