--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <script type="text/javascript">
             function check1()
             {
-                $url1 = document.getElementById("photo1").value;
+                $url1 = document.getElementById("photo1_url").value;
                 VK.api('photos.getById', {photos: $url1, v: '5.34'}, function(data) {
                 if (data.response && data.response.length > 0) {
                 $id1 = data.response[0].id;
@@ -30,12 +30,12 @@
                 <div class="block_content" style="margin-top: 2px">
                     <div id="photo1" style="float: left">
                         <div class="link">https://vk.com/photo</div>
-                        <input id="photo1" onkeyup="check1()" style="color: lightgray" value="1_278184324" onblur="if(this.value==''){this.value='1_278184324';this.style.color ='lightgray';}" onfocus="if(this.value=='1_278184324'){this.value='';this.style.color = 'gray'}"></input>
+                        <input id="photo1_url" onkeyup="check1()" style="color: lightgray" value="1_278184324" onblur="if(this.value==''){this.value='1_278184324';this.style.color ='lightgray';}" onfocus="if(this.value=='1_278184324'){this.value='';this.style.color = 'gray'}"></input>
                         <div class="link_end"><img src="/images/fail.png" width="22px" height="22px" id="checked1"></img></div>
                     </div>
                     <div id="photo2" style="float: right">
                         <div class="link">https://vk.com/photo</div>
-                        <input id="photo2" onkeyup="check2()" style="color: lightgray" value="2_278184324" onblur="if(this.value==''){this.value='2_278184324';this.style.color ='lightgray';}" onfocus="if(this.value=='1_278184324'){this.value='';this.style.color = 'gray'}"></input>
+                        <input id="photo2_url" onkeyup="check2()" style="color: lightgray" value="2_278184324" onblur="if(this.value==''){this.value='2_278184324';this.style.color ='lightgray';}" onfocus="if(this.value=='1_278184324'){this.value='';this.style.color = 'gray'}"></input>
                         <div class="link_end"><img src="/images/fail.png" width="22px" height="22px" id="checked2"></img></div>
                     </div>
                 </div>
