--- a/index.html
+++ b/index.html
@@ -6,7 +6,38 @@
         <script src="https://vk.com/js/api/xd_connection.js?2" type="text/javascript"></script>
         <script scr="js/jquery-2.1.1.js"></script>
         <link rel="stylesheet" type="text/css" href="css/style.css">
-        <script src="js/api.js" type="text/javascript"></script>
+        <script type="text/javascript">
+          function check1()
+          {
+            $url1 = document.getElementById("photo1_url").value;
+            VK.api('photos.getById', {photos: $url1, v: '5.34'}, function(data) {
+            if (data.response && data.response.length > 0) {
+            $id1 = data.response[0].id;
+            $owner_id1 = data.response[0].owner_id;
+            $photo1 = data.response[0].photo_604;
+            document.getElementById("photo1_view").src = 'https://vk.com/photo'.$url1;
+            document.getElementById("checked1").src = 'images/okey.png';
+            } else {
+            document.getElementById("checked1").src = 'images/fail.png';
+            }
+            });
+          }
+          function check2()
+          {
+            $url2 = document.getElementById("photo2_url").value;
+            VK.api('photos.getById', {photos: $url2, v: '5.34'}, function(data) {
+            if (data.response && data.response.length > 0) {
+            $id2 = data.response[0].id;
+            $owner_id2 = data.response[0].owner_id;
+            $photo2 = data.response[0].photo_604;
+            document.getElementById("photo2_view").src = 'https://vk.com/photo'.$url2;
+            document.getElementById("checked2").src = 'images/okey.png';
+            } else {
+            document.getElementById("checked2").src = 'images/fail.png';
+            }
+            });
+          }
+        </script>
     </head>
     <body>
         <div id="Security">
