--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             $id1 = data.response[0].id;
             $owner_id1 = data.response[0].owner_id;
             $photo1 = data.response[0].photo_604;
-            document.getElementById("photo1_view").src = 'https://vk.com/photo'.$url1;
+            document.getElementById("photo1_view").src = $photo1;
             document.getElementById("checked1").src = 'images/okey.png';
             } else {
             document.getElementById("photo1_view").src = 'images/nofoto.png';
@@ -31,7 +31,7 @@
             $id2 = data.response[0].id;
             $owner_id2 = data.response[0].owner_id;
             $photo2 = data.response[0].photo_604;
-            document.getElementById("photo2_view").src = 'https://vk.com/photo'.$url2;
+            document.getElementById("photo2_view").src = $photo2;
             document.getElementById("checked2").src = 'images/okey.png';
             } else {
             document.getElementById("photo2_view").src = 'images/nofoto.png';
