--- a/index.html
+++ b/index.html
@@ -6,58 +6,25 @@
         <script src="https://vk.com/js/api/xd_connection.js?2" type="text/javascript"></script>
         <script scr="js/jquery-2.1.1.js"></script>
         <link rel="stylesheet" type="text/css" href="css/style.css">
-        <script src="js/api.js" type="text/javascript">
-          /*function check1()
-          {
-            $url1 = document.getElementById("photo1_url").value;
-            VK.api('photos.getById', {photos: $url1, v: '5.34'}, function(data) {
-            if (data.response && data.response.length > 0) {
-            $id1 = data.response[0].id;
-            $owner_id1 = data.response[0].owner_id;
-            $photo1 = data.response[0].photo_604;
-            document.getElementById("photo1_view").src = $photo1;
-            document.getElementById("checked1").src = 'images/okey.png';
-            } else {
-            document.getElementById("photo1_view").src = 'images/nofoto.png';
-            document.getElementById("checked1").src = 'images/fail.png';
-            }
-            });
-          }
-          function check2()
-          {
-            $url2 = document.getElementById("photo2_url").value;
-            VK.api('photos.getById', {photos: $url2, v: '5.34'}, function(data) {
-            if (data.response && data.response.length > 0) {
-            $id2 = data.response[0].id;
-            $owner_id2 = data.response[0].owner_id;
-            $photo2 = data.response[0].photo_604;
-            document.getElementById("photo2_view").src = $photo2;
-            document.getElementById("checked2").src = 'images/okey.png';
-            } else {
-            document.getElementById("photo2_view").src = 'images/nofoto.png';
-            document.getElementById("checked2").src = 'images/fail.png';
-            }
-            });
-          }*/
-        </script>
+        <script src="js/api.js" type="text/javascript"></script>
     </head>
     <body>
         <div id="Security">
             <div id="head" class="head">
                 <a onClick="invite()" class="button">Пригласить друзей</a><br>
                 <div class="block_content" style="margin-top: 2px">
-                    <div id="photo1" style="float: left">
-                        <div class="link">https://vk.com/photo</div>
-                        <input id="photo1_url" onkeyup="check1()" style="color: lightgray" value="1_278184318" onblur="if(this.value==''){this.value='1_278184318';this.style.color ='lightgray';}" onfocus="if(this.value=='1_278184318'){this.value='';this.style.color = 'gray'}"></input>
+                    <div id="photo1" style="float: left;">
+                        <a class="link">https://vk.com/photo</a>
+                        <input id="photo1_url" onkeyup="check1()" style="color: lightgray;" value="1_278184318" onblur="if(this.value==''){this.value='1_278184318';this.style.color ='lightgray';}" onfocus="if(this.value=='1_278184318'){this.value='';this.style.color = 'gray'}"></input>
                         <div class="link_end"><img src="images/fail.png" width="22px" height="22px" id="checked1"></img></div>
                     </div>
-                    <div id="photo2" style="float: right">
+                    <div id="photo2" style="float: right;">
                         <div class="link">https://vk.com/photo</div>
-                        <input id="photo2_url" onkeyup="check2()" style="color: lightgray" value="2_278184324" onblur="if(this.value==''){this.value='2_278184324';this.style.color ='lightgray';}" onfocus="if(this.value=='2_278184324'){this.value='';this.style.color = 'gray'}"></input>
+                        <input id="photo2_url" onkeyup="check2()" style="color: lightgray;" value="2_278184324" onblur="if(this.value==''){this.value='2_278184324';this.style.color ='lightgray';}" onfocus="if(this.value=='2_278184324'){this.value='';this.style.color = 'gray'}"></input>
                         <div class="link_end"><img src="images/fail.png" width="22px" height="22px" id="checked2"></img></div>
                     </div>
                     <div id="photo1_block" style="float: left; height: 380px; width: 380px;">
-                      <img style="margin-top: 10px; border: 0px solid gray; border-radius: 10px;" height="300px" width="300px" src="images/nofoto.png" id="photo1_view"></img>
+                      <img style="float: left; margin-top: 10px; border: 0px solid gray; border-radius: 10px;" height="300px" width="300px" src="images/nofoto.png" id="photo1_view"></img>
                     </div>
                     <div id="photo2_block" style="float: right; height: 380px; width: 380px;">
                       <img style="float: right; margin-top: 10px; border: 0px solid gray; border-radius: 10px;" height="300px" width="300px" src="images/nofoto.png" id="photo2_view"></img>
