--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
                 <a onClick="invite()" class="button">Пригласить друзей</a><br>
                 <div class="block_content" style="margin-top: 2px">
                     <div id="photo1" style="float: left;">
-                        <a class="link">https://vk.com/photo</a>
+                        <a class="link"><img src="images/text.png" width="152px" height="22px"></img></a>
                         <input id="photo1_url" onkeyup="check1()" style="color: lightgray;" value="1_278184318" onblur="if(this.value==''){this.value='1_278184318';this.style.color ='lightgray';}" onfocus="if(this.value=='1_278184318'){this.value='';this.style.color = 'gray'}"></input>
                         <div class="link_end"><img src="images/fail.png" width="22px" height="22px" id="checked1"></img></div>
                     </div>
                     <div id="photo2" style="float: right;">
-                        <div class="link">https://vk.com/photo</div>
+                        <div class="link"><img src="images/text.png" width="152px" height="22px"></img></div>
                         <input id="photo2_url" onkeyup="check2()" style="color: lightgray;" value="2_278184324" onblur="if(this.value==''){this.value='2_278184324';this.style.color ='lightgray';}" onfocus="if(this.value=='2_278184324'){this.value='';this.style.color = 'gray'}"></input>
                         <div class="link_end"><img src="images/fail.png" width="22px" height="22px" id="checked2"></img></div>
                     </div>
