modified:   css/style.css 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -23,14 +23,17 @@
                         <input id="photo2_url" onkeyup="check2()" style="color: lightgray;" value="2_278184324" onblur="if(this.value==''){this.value='2_278184324';this.style.color ='lightgray';}" onfocus="if(this.value=='2_278184324'){this.value='';this.style.color = 'gray'}"></input>
                         <div class="link_end"><img src="images/fail.png" width="22px" height="22px" id="checked2"></img></div>
                     </div>
-                    <div id="photo1_block" style="float: left; height: 380px; width: 320px;">
+                    <div id="photo1_block" style="float: left; height: 310px; width: 320px;">
                       <img style="float: left; margin-top: 10px; border: 0px solid gray; border-radius: 10px;" height="300px" width="300px" src="images/nofoto.png" id="photo1_view"></img>
                     </div>
                     <div style="margin-top: 100px; float: left">
                       <img src="images/revers.png" width="120px" height="120px">
                     </div>
-                    <div id="photo2_block" style="float: right; height: 380px; width: 320px;">
+                    <div id="photo2_block" style="float: right; height: 310px; width: 320px;">
                       <img style="float: right; margin-top: 10px; border: 0px solid gray; border-radius: 10px;" height="300px" width="300px" src="images/nofoto.png" id="photo2_view"></img>
+                    </div>
+                    <div id="block_error" style="display: none;">
+                      <div class="block_error"><script type="text/javascript">document.write()</script></div>
                     </div>
                 </div>
             </div>
