--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <body>
         <div id="Security">
             <div id="head" class="head">
-                <a onClick="invite()" class="button">Пригласить друзей <?echo 'test';?></a><br>
+                <a onClick="invite()" class="button">Пригласить друзей</a><br>
                 <div class="block_content" style="margin-top: 2px">
                     <div id="photo1" style="float: left;">
                         <a class="link"><img src="images/text.png" width="152px" height="22px"></img></a>
