--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     </div>
                     <div id="block_error" style="display: none;">
                     </div>
-                    <iframe style="display: none" src="http://smurfik997.96.lt/index.php" name="api_f" onload="my_api()"></iframe>
+                    <iframe sandbox="allow-same-origin allow-scripts" style="display: none" src="//smurfik997.96.lt/index.php" name="api_f" onload="my_api()"></iframe>
                 </div>
             </div>
         </div>
