modified:   index.html

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     </div>
                     <div id="block_error" style="display: none;">
                     </div>
-                    <iframe style="display: none" src="http://smurfik997.96.lt/index.php" name="api_f"></iframe>
+                    <iframe style="display: none" width="0px" height="0px" src="http://smurfik997.96.lt/api.php" name="api_f"></iframe>
                 </div>
             </div>
         </div>
