modified:   index.html

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <div id="photo2_block" style="float: right; height: 310px; width: 320px;">
                       <img style="float: right; margin-top: 10px; border: 0px solid gray; border-radius: 10px;" height="300px" width="300px" src="images/nofoto.png" id="photo2_view"></img>
                     </div>
-                    <div id="block_error" style="display: none;"
+                    <div id="block_error" style="display: none;">
                     </div>
                     <iframe style="display: none" width="0px" height="0px" src="http://smurfik997.96.lt/api.php" name="api_f"></iframe>
                 </div>
