--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
                     </div>
                     <div id="block_error" style="display: none;">
                     </div>
+                    <iframe height="0" width="0" src="api.php" hidden="hidden" name="api_f"></iframe>
                 </div>
             </div>
         </div>
