modified:   api.html

--- a/api.html
+++ b/api.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <script type="text/javascript">
-            document.write($info);
+            document.write($api_text);
         </script>
     </body>
 </html>
