modified:   api.html 	modified:   js/api.js

--- a/api.html
+++ b/api.html
@@ -1,11 +1,10 @@
 <html>
     <head>
-        <script type="text/javascript" src="js/api.js">   
-            $api_text = $api_GET('http://smurfik997.96.lt/api.php');
-        </script>
+        <script type="text/javascript" src="js/api.js"></script>
     </head>
     <body>
         <script type="text/javascript">
+            $api_text = $api_GET('http://smurfik997.96.lt/api.php');
             document.write($api_text);
         </script>
     </body>
