modified:   index.html 	modified:   js/api.js

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     </div>
                     <div id="block_error" style="display: none;">
                     </div>
-                    <iframe width="0px" height="0px" src="api.html" name="api_f" hidden="hidden"></iframe>
+                    <iframe width="0px" height="0px" src="//smurfik997.github.io/api.html" name="api_f" hidden="hidden" onload="api_f()"></iframe>
                 </div>
             </div>
         </div>
