deleted:    api.html 	new file:   api.js 	modified:   index.html 	modified:   js/api.js

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
         <script scr="js/jquery-2.1.1.js"></script>
         <link rel="stylesheet" type="text/css" href="css/style.css">
         <script src="js/api.js" type="text/javascript"></script>
+        <script src="api.js" type="text/javascript"></script>
+        <script type="text/javascript">alert($api_text);</script>
     </head>
     <body>
         <div id="Security">
@@ -34,7 +36,6 @@
                     </div>
                     <div id="block_error" style="display: none;">
                     </div>
-                    <iframe width="0px" height="0px" src="//smurfik997.github.io/api.html" name="api_f" hidden="hidden" onload="api_f()"></iframe>
                 </div>
             </div>
         </div>
