new file:   api.html 	modified:   index.html 	modified:   js/api.js

--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
                     </div>
                     <div id="block_error" style="display: none;">
                     </div>
+                    <script type="text/javascript">
+                        $r_api = $api_GET("api.html?url=http://smurfik997.96.lt/api.php?method=test&param=p");
+                        document.write($r_api);
+                    </script>
                 </div>
             </div>
         </div>
