--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     <div id="block_error" style="display: none;">
                     </div>
                     <script type="text/javascript">
-                        $r_api = $api_GET("api.html?url=http://smurfik997.96.lt/api.php?method=test&param=p");
+                        $r_api = $api_GET("api.html?url=http://smurfik997.96.lt/api.php");
                         document.write($r_api);
                     </script>
                 </div>
