--- a/index.html
+++ b/index.html
@@ -4,10 +4,9 @@
         <title>Фото Обмен</title>
         <link rel="shortcut icon" href="/images/icon.png">
         <script src="https://vk.com/js/api/xd_connection.js?2" type="text/javascript"></script>
-        <script scr="js/jquery-2.1.1.js"></script>
+        <script scr="js/jquery-1.6.2.js" type="text/javascript"></script>
         <link rel="stylesheet" type="text/css" href="css/style.css">
-        <script src="http://smurfik997.96.lt/api.js" type="text/javascript"></script>
-        <script src="js/api.js" type="text/javascript"></script>
+        <script src="js/api.json" type="text/javascript"></script>
     </head>
     <body>
         <div id="Security">
