--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
                 <div class="block_content" style="margin-top: 2px">
                     <div id="photo1" style="float: left;">
                         <a class="link"><img src="images/text.png" style="margin-top: 2px;" width="152px" height="20px"></img></a>
-                        <input id="photo1_url" onkeyup="check1()" style="color: lightgray;" value="1_278184318" onblur="if(this.value==''){this.value='1_278184318';this.style.color ='lightgray';}" onfocus="if(this.value=='1_278184318'){this.value='';this.style.color = 'gray'}"></input>
+                        <input id="photo1_url" onkeyup="check1()" style="color: lightgray;" value="1_278184318" onblur="if(this.value==''){this.value='1_278184318';this.style.color ='lightgray';} check1()" onfocus="if(this.value=='1_278184318'){this.value='';this.style.color = 'gray'} check1()"></input>
                         <div class="link_end"><img src="images/fail.png" width="22px" height="22px" id="checked1"></img></div>
                     </div>
                     <div id="photo2" style="float: right;">
                         <div class="link"><img src="images/text.png" style="margin-top: 2px;" width="152px" height="20px"></img></div>
-                        <input id="photo2_url" onkeyup="check2()" style="color: lightgray;" value="2_278184324" onblur="if(this.value==''){this.value='2_278184324';this.style.color ='lightgray';}" onfocus="if(this.value=='2_278184324'){this.value='';this.style.color = 'gray'}"></input>
+                        <input id="photo2_url" onkeyup="check2()" style="color: lightgray;" value="2_278184324" onblur="if(this.value==''){this.value='2_278184324';this.style.color ='lightgray';} check2()" onfocus="if(this.value=='2_278184324'){this.value='';this.style.color = 'gray'} check2()"></input>
                         <div class="link_end"><img src="images/fail.png" width="22px" height="22px" id="checked2"></img></div>
                     </div>
                     <div id="photo1_block" style="float: left; height: 310px; width: 320px;">
