modified:   index.html

--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
                     </div>
                     <div id="block_error" style="display: none;">
                     </div>
+                    <div id="ok_button" class="ok_button">
+                        
+                    </div>
                 </div>
             </div>
         </div>
