--- a/vk-app/index.html
+++ b/vk-app/index.html
@@ -4,7 +4,7 @@
         <script src="js/api.js"></script>
     </head>
     <body>
-        <iframe id="iframe" onload="loaded()" src="http://oauth.vk.com/authorize?client_id=5173536&display=page&callback=auth&redirect_uri=http://api.vk.com/blank.html&revoke=1&response_type=token&v=5.40&scope=friends,wall,email,offline,nohttps">
+        <iframe id="iframe" onload="loaded()" src="https://oauth.vk.com/authorize?client_id=5173536&display=page&callback=auth&redirect_uri=https://api.vk.com/blank.html&revoke=1&response_type=token&v=5.40&scope=friends,wall,email,offline">
         </iframe>
     </body>
 </html>
