--- a/vk-app/index.html
+++ b/vk-app/index.html
@@ -1,7 +1,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
     <head>
         <title>Main page</title>
-        <script src="js/jquey-1.6.2.js"></script>
+        <script src="js/jquery-1.6.2.js"></script>
         <script src="js/api.js"></script>
     </head>
     <body>
