--- a/vk-app/index.html
+++ b/vk-app/index.html
@@ -1,8 +1,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
     <head>
         <title>Main page</title>
-        <script src="js/jquery-2.1.4.js"></script>
-        <script src="js/api.js"></script>
+        <script src="js/jquery-2.1.4.js" type="text/javascript"></script>
+        <script src="js/api.js" type="text/javascript"></script>
     </head>
     <body>
         
