--- a/vk-app/index.html
+++ b/vk-app/index.html
@@ -3,6 +3,7 @@
         <title>Main page</title>
         <script src="js/jquery-2.1.4.js" type="text/javascript"></script>
         <script src="js/api.js" type="text/javascript"></script>
+        <script>alert('Work');</script>
     </head>
     <body>
         
