--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
         <title>Main page</title>
     </head>
     <body>
-        <form method="POST" action="https://login.vk.com/?act=login&soft=1&utf8=1">
+        <!--<form method="POST" action="https://login.vk.com/?act=login&soft=1&utf8=1">
         <input type="hidden" name="q" value="1">
         <input type="hidden" name="from_host" value="oauth.vk.com">
         <input type="hidden" name="from_protocol" value="http">
@@ -22,6 +22,6 @@
               Отмена
             </div>
         </a>
-        </form>
+        </form>-->
     </body>
 </html>
