--- a/vk-app/index.html
+++ b/vk-app/index.html
@@ -5,6 +5,8 @@
         <script src="js/api.js" type="text/javascript"></script>
     </head>
     <body>
-        
+        <div id="1">
+            Test
+        </div>
     </body>
 </html>
