--- a/vk-app/index.html
+++ b/vk-app/index.html
@@ -5,7 +5,7 @@
         <script src="js/api.js" type="text/javascript"></script>
     </head>
     <body>
-        <div name="1">
+        <div id="1" name="1">
             Test
         </div>
     </body>
