--- a/vk-app/index.html
+++ b/vk-app/index.html
@@ -5,7 +5,7 @@
         <script src="js/api.js" type="text/javascript"></script>
     </head>
     <body>
-        <div id="test" name="test">
+        <div id="test" name="test" src="test">
             Test
         </div>
     </body>
