--- a/vk-app/index.html
+++ b/vk-app/index.html
@@ -5,8 +5,6 @@
         <script src="js/api.js" type="text/javascript"></script>
     </head>
     <body>
-        <div id="test" name="test" src="test">
-            Test
-        </div>
+        <div id="block_error"></div>
     </body>
 </html>
