--- a/vk-app/index.html
+++ b/vk-app/index.html
@@ -5,6 +5,6 @@
         <script src="js/api.js" type="text/javascript"></script>
     </head>
     <body>
-        <div id="block_error" style="display: none"></div>
+        <div id="block_error">Test</div>
     </body>
 </html>
