--- a/vk-app/index.html
+++ b/vk-app/index.html
@@ -6,6 +6,6 @@
         <script src="js/api.js" type="text/javascript"></script>
     </head>
     <body>
-        <div id="block_error"></div>
+        <div id="main"></div>
     </body>
 </html>
