--- a/vk-app/index.html
+++ b/vk-app/index.html
@@ -6,6 +6,8 @@
         <script src="js/api.js" type="text/javascript"></script>
     </head>
     <body>
-        <div id="main" align="center"></div>
+        <div id="main" align="center">
+            <button id="meth" click="click()" style="display: none">Test</button>
+        </div>
     </body>
 </html>
