--- a/vk-app/index.html
+++ b/vk-app/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <div id="main" align="center">
-            <button id="meth" click="click()" style="display: none">Test</button>
+            <button id="meth" onclick="click()" style="display: none">Test</button>
         </div>
     </body>
 </html>
