--- a/vk-app/index.html
+++ b/vk-app/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <div id="main" align="center">
-            <input id="meth" type="button" value="Проверить" onclick="click();">
+            <input id="meth" type="button" value="Проверить" onclick="click()">
         </div>
     </body>
 </html>
