--- a/vk-app/index.html
+++ b/vk-app/index.html
@@ -7,7 +7,16 @@
     </head>
     <body>
         <div id="main" align="center">
-            <input id="meth" type="button" value="Проверить" onclick="click()">
+            <input id="meth" type="button" value="Проверить" onclick="for (var i=1; i<20; i++)
+   {
+        VK.Api.call('fave.getPosts', {offset: 98, count: 1, extended: 0, access_token: $_GET('access_token')}, function(r)
+        { 
+            if(r.response)
+            { 
+                alert('Привет, ' + r.response[0].id); 
+            } 
+        });     
+   }">
         </div>
     </body>
 </html>
