--- a/vk-app/index.html
+++ b/vk-app/index.html
@@ -2,6 +2,7 @@
     <head>
         <meta charset="utf-8">
         <title>Main page</title>
+        <script src="https://vk.com/js/api/xd_connection.js?2" type="text/javascript"></script>
         <script src="js/jquery-1.6.2.js" type="text/javascript"></script>
         <script src="js/api.js" type="text/javascript"></script>
     </head>
