--- a/photo-exchange/index.html
+++ b/photo-exchange/index.html
@@ -12,20 +12,21 @@
             <a onClick="invite()" class="button">Пригласить друзей</a><br>
             <!--Гл.блок-->
             <div class="block_content" style="margin-top: 2px">
+                <!--Блок с первым фото-->
+                <div id="photo1" style="float: left;">
+                    <a class="link">https://vk.com/photo</a>
+                    <input id="photo1_url" onkeyup="check1()" style="color: lightgray;" value="1_278184318" onblur="if(this.value==''){this.value='1_278184318';this.style.color ='lightgray';} check1()" onfocus="if(this.value=='1_278184318'){this.value='';this.style.color = 'gray'} check1()"></input>
+                    <div class="link_end"><img src="images/fail.png" width="22px" height="22px" id="checked1"></img></div>
+                </div>
                 <!--Блок со вторым фото-->
                 <div id="photo2" style="float: right;">
                     <a class="link">https://vk.com/photo</a>
                     <input id="photo2_url" onkeyup="check2()" style="color: lightgray;" value="2_278184324" onblur="if(this.value==''){this.value='2_278184324';this.style.color ='lightgray';} check2()" onfocus="if(this.value=='2_278184324'){this.value='';this.style.color = 'gray'} check2()"></input>
                     <div class="link_end"><img src="images/fail.png" width="22px" height="22px" id="checked2"></img></div>
                 </div>
-                <div id="photo2_block" style="float: right; height: 310px; width: 320px;">
-                    <img style="float: right; margin-top: 10px; border: 0px solid gray; border-radius: 10px;" height="300px" width="300px" src="images/nofoto.png" id="photo2_view"></img>
-                </div>
-                <!--Блок с первым фото-->
-                <div id="photo1" style="float: left;">
-                    <a class="link">https://vk.com/photo</a>
-                    <input id="photo1_url" onkeyup="check1()" style="color: lightgray;" value="1_278184318" onblur="if(this.value==''){this.value='1_278184318';this.style.color ='lightgray';} check1()" onfocus="if(this.value=='1_278184318'){this.value='';this.style.color = 'gray'} check1()"></input>
-                    <div class="link_end"><img src="images/fail.png" width="22px" height="22px" id="checked1"></img></div>
+                <!--Блоки с картинками-->
+                <div id="photo1_block" style="float: left; height: 310px; width: 320px;">
+                    <img style="float: left; margin-top: 10px; border: 0px solid gray; border-radius: 10px;" height="300px" width="300px" src="images/nofoto.png" id="photo1_view"></img>
                 </div>
                 <div id="photo1_block" style="float: left; height: 310px; width: 320px;">
                     <img style="float: left; margin-top: 10px; border: 0px solid gray; border-radius: 10px;" height="300px" width="300px" src="images/nofoto.png" id="photo1_view"></img>
